@@ -1,6 +1,5 @@
 package ee.ant.dotmatrix;
 
-import javafx.collections.ObservableList;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
 import javafx.scene.Node;
@@ -12,6 +11,7 @@ import javafx.scene.paint.Color;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Base64;
 import java.util.List;
 
 public class PrimaryController {
@@ -81,12 +81,12 @@ public class PrimaryController {
      * Show promotion
      */
     private void showAbout() {
-        String uri = "www.ant.ee";
-        Alert alert = new Alert(Alert.AlertType.INFORMATION);
+        var uri = "www.ant.ee";
+        var alert = new Alert(Alert.AlertType.INFORMATION);
         alert.setTitle("About author");
         alert.setHeaderText("");
-        alert.setGraphic(new ImageView(new Image("ant.png")));
-        Hyperlink link = new Hyperlink(uri);
+        alert.setGraphic(new ImageView(new Image("ee/ant/dotmatrix/ant.png")));
+        var link = new Hyperlink(uri);
         link.setOnAction(event -> App.openURL(uri + "/?dotmatrix"));
         alert.getDialogPane().contentProperty().set(link);
         alert.showAndWait();
@@ -103,11 +103,11 @@ public class PrimaryController {
         hexString.clear();
         for (int i = 0; i < columns; i++) {
             for (int j = 0; j < rows; j++) {
-                Button btn = new Button();
+                var btn = new Button();
                 btn.setMinSize(16.0, 16.0);
                 btn.setMaxSize(16.0, 16.0);
                 btn.setOnAction(((ActionEvent click) -> {
-                    ObservableList classes = btn.getStyleClass();
+                    var classes = btn.getStyleClass();
                     if (classes.size() == 1) {
                         btn.getStyleClass().add("buttonOn");
                     } else {
@@ -131,13 +131,13 @@ public class PrimaryController {
     private void drawLines(int columns) {
         // Draw horizontal line
         for (int i = 0; i < columns; i++) {
-            Button btn = (Button) dotMatrix.getChildren().get(2 * i * 8 + 7);
+            var btn = (Button) dotMatrix.getChildren().get(2 * i * 8 + 7);
             btn.setBorder(new Border(new BorderStroke(Color.BLACK, BorderStrokeStyle.SOLID, CornerRadii.EMPTY, new BorderWidths(0, 0, 1, 0))));
         }
 
         // Draw vertical line
         for (int i = 0; i < 16; i++) {
-            Button btn = (Button) dotMatrix.getChildren().get(i + 8 * columns);
+            var btn = (Button) dotMatrix.getChildren().get(i + 8 * columns);
             if (i == 7) { // One button has both bottom and left lines
                 btn.setBorder(new Border(new BorderStroke(Color.BLACK, BorderStrokeStyle.SOLID, CornerRadii.EMPTY, new BorderWidths(0, 0, 1, 1))));
             } else {
@@ -155,13 +155,13 @@ public class PrimaryController {
         // Assume that hex string contains words separated by comas like
         // 0x00, 0x07, 0x05, 0x07, 0x00
         // create corresponding byte[] array
-        String binaryString = text.replace("{", "")
+        var binaryString = text.replace("{", "")
                 .replace("}", "")
                 .replace("0x", "")
                 .replace(",", "")
                 .replace(" ", "");
-       // byte[] bytes = DatatypeConverter.parseHexBinary(binaryString);  TODO refactor
-       // fillMatrixWithDots(bytes);
+        var bytes = Base64.getMimeDecoder().decode(binaryString.getBytes());
+        fillMatrixWithDots(bytes);
     }
 
     /**
@@ -171,7 +171,7 @@ public class PrimaryController {
      * @param bytes byte array that encodes symbol
      */
     private void fillMatrixWithDots(byte[] bytes) {
-        int colums = bytes.length;
+        var colums = bytes.length;
         if (bytes.length > 8) {
             // there are 4 segments
             colums = bytes.length / 2;
@@ -213,7 +213,7 @@ public class PrimaryController {
      */
     private void drawSegment(byte[] bytes) {
         for (int i = 0; i < bytes.length; i++) {
-            byte column = bytes[i];
+            var column = bytes[i];
             for (int j = 0; j < 8; j++) {
                 if ((column & 1) == 1) {
                     dotMatrix.getChildren().get(i * 8 + j).getStyleClass().add("buttonOn");
@@ -233,7 +233,7 @@ public class PrimaryController {
      */
     private void drawSegment(int offsetCol, int offsetRaw, byte[] bytes) {
         for (int i = 0; i < bytes.length; i++) {
-            byte column = bytes[i];
+            var column = bytes[i];
             for (int j = offsetCol; j < offsetCol + 8; j++) {
                 if ((column & 1) == 1) {
                     dotMatrix.getChildren().get(i * 16 + j + offsetRaw * 16).getStyleClass().add("buttonOn");
@@ -247,7 +247,7 @@ public class PrimaryController {
      * Create font hex string and display it
      */
     private void generateHexString() {
-        StringBuilder hexOut = new StringBuilder();
+        var hexOut = new StringBuilder();
 
         if (dotMatrix.getChildren().size() > 64) {
             // Multi- segment
@@ -260,7 +260,7 @@ public class PrimaryController {
             hexOut.append(getSegmentHex(dotMatrix.getChildren()));
         }
 
-        String out = hexOut.toString();
+        var out = hexOut.toString();
         hexString.setText("{ " + out.substring(0, out.length() - 1) + " }");
     }
 
@@ -274,7 +274,7 @@ public class PrimaryController {
      */
     private char[] readSegment(int offsetCol, int offsetRaw) {
 
-        List<Node> segment = new ArrayList<>();
+        var segment = new ArrayList<Node>();
         for (int i=offsetCol; i < offsetCol + dotMatrix.getChildren().size()/32; i++) {
             for (int j=offsetRaw; j < offsetRaw + 8; j++) {
                 segment.add(dotMatrix.getChildren().get(i*16 + j));
@@ -290,11 +290,11 @@ public class PrimaryController {
      * @return hex string
      */
     private String getSegmentHex(List<Node> segment) {
-        StringBuilder hexOut = new StringBuilder();
+        var hexOut = new StringBuilder();
         // Single segment code
         byte element = 0; // initial byte
         for (int i = 0; i < segment.size(); i++) {
-            Node button = segment.get(i);
+            var button = segment.get(i);
             // reset element each 8 bits
             if (i % 8 == 0) {
                 element = 0;
